alignment corrections + flex added

--- a/css/container.css
+++ b/css/container.css
@@ -7,3 +7,23 @@
 .appHeader {
     margin: 30px 0;
 }
+
+@media (max-width: 767px) {
+    .flex {
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 767px) {
+    .flex__itemInput {
+        width: 100%;
+        margin: 0px;
+    }
+}
+
+@media (max-width: 767px) {
+    .flex__itemButton {
+        width: 100%;
+        margin-top: 5px;
+    }
+}
