--- a/css/form.css
+++ b/css/form.css
@@ -1,15 +1,13 @@
 .formContainer {
     background-color:  white;
-    margin: 0 auto;
     display: inline-block;
     border: none;
-    height: 150px;
     width: 100%;
-    max-width: 1000px;
 }
 
 .formHeader {
-    padding: 10px;
+    padding: 0px;
+    margin: 15px;
     border: none;
     font-size: 20px;
 }
@@ -19,20 +17,46 @@
     border-bottom: 2px solid rgb(235, 234, 234);
 }
 
+.form__inputBlock {
+    width: 100%;
+    margin: 0px;
+}
+
 .form__fieldset {
     border: none;
+    margin: 15px;
+    padding: 0px;
 }
 
 .form__inputField {
-    border: 1px solid rgb(163, 163, 163);
-    height: 30px;
-    display: inline-block;
+    height: 35px;
+    margin: 0px 15px 0px 0px;
     padding: 10px;
+    border: 1px solid rgb(163, 163, 163);
+    display: inline-block;
 }
 
 .form_addTaskButton {
     background-color: teal;
     color: white;
     border: none;
-    height: 30px;
+    height: 35px;
+}
+
+.flexInput {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.flexInput__itemInput {
+    flex-basis: 80%;
+    flex-grow: 1;
+    margin: 5px;
+}
+
+.flexInput__itemButton {
+    flex-basis: 20%;
+    flex-grow: 1;
+    margin: 5px;
 }
